package ro.uaic.info.game.objects.player;

public class PlayerInputListener {

    private boolean pressedUp() {
        return false;
    }

    private boolean pressedDown() {
        return false;
    }

    private boolean pressedLeft() {
        return false;
    }

    private boolean pressedRight() {
        return false;
    }


}
