package ro.uaic.info.game.objects.projectile;

public enum ProjectileType {
}
